test/expected/explain_prri.out
explain int &&*x
            ^
13: error: pointer to rvalue reference is illegal; did you mean "*&"?
